# dictate

./: .env.example  .gitignore  Cargo.toml  INSTALL.md  README.md  improvement.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml
docs/superpowers/specs/: 2026-06-03-mic-stop-release-design.md
site/: package.json
site/.superpowers/brainstorm/1600657-1780317770/: .server-info  design-direction.html  improvements.html  visual-style.html
site/app/: globals.css  layout.tsx  page.tsx
site/app/components/: AudioVisualizer.tsx  CopyButton.tsx  DemoTerminal.tsx  GSAPAnimations.tsx  InstallSection.tsx  ScrollReveal.tsx
site/docs/superpowers/specs/: 2026-06-01-marketing-site-design.md
site/public/: 1.html  2.html  3.html  4.html  5.html  6.html  INSTALL.md  install.sh
src/: audio.rs  command.rs  config.rs  editing.rs  intent.rs  main.rs  streaming.rs  transcript.rs  typing.rs  wav.rs
src/transcription/: mod.rs  online.rs
