[package]
name = "dictate"
version = "1.0.0"
edition = "2021"
description = "Speech-to-text tool for Wayland with stdout output"
license = "GPL-3.0-or-later"
authors = ["Artur Roszczyk <artur.roszczyk@gmail.com>"]

[features]
default = []
local = ["dep:whisper-rs", "dep:hound"]

[dependencies]
# Core dependencies (essential)
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
dirs = "5.0"

# Audio capture
cpal = "0.15"

# Optional local transcription. Online providers build by default on normal Linux machines.
whisper-rs = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }


# JSON parsing for API responses
serde_json = "1.0"


# Async trait support
async-trait = "0.1"


[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
tokio-test = "0.4"


[[bin]]
name = "dictate"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
